example/errors/interpret/cannot_find_variable_in_scope.box
set x: int = 5;

when x == 5 {
    println("y = " + y as str);
}
